# computer4

./: .gitignore  AGENTS.md  README.md  git.sh
ai/llm4/: Cargo.toml  finetune.txt  pretrain.txt  run.sh  test.sh
ai/llm4/examples/: gen_data.rs  generate.rs  grad_check.rs  train_finetune.rs  train_pretrain.rs
ai/llm4/src/: data.rs  lib.rs  main.rs  model.rs  tensor.rs  train.rs  vocab.rs
ai/ml4/: Cargo.toml  run.sh
ai/ml4/examples/: clustering.rs  decomposition.rs  ensemble.rs  example.rs  linear_models.rs  pipeline.rs  preprocessing.rs  trees.rs
ai/ml4/src/: clustering.rs  decomposition.rs  ensemble.rs  lib.rs  linear_models.rs  main.rs  metrics.rs  preprocessing.rs  tree.rs
ai/ml4/tests/: test_ml.rs
compiler/objdump/: Cargo.toml
compiler/objdump/examples/: analyze_elf.rs  find_symbol.rs
compiler/objdump/src/: lib.rs  main.rs
compiler/objdump/tests/: objdump_test.rs
compiler/rustc4/: .gitignore  Cargo.toml  test.sh
compiler/rustc4/examples_rustc4/: add.rs  fact.rs  fib.rs  gcd.rs  if_else.rs  is_prime.rs
compiler/rustc4/src/: ast.rs  codegen.rs  lexer.rs  lib.rs  main.rs  parser.rs
compiler/rustc4/tests/: integration_test.rs
compiler/rv4/: Cargo.toml  disasm.py  disasm2.py  test.sh
compiler/rv4/examples/: fact.rs  fact.s  fib.rs  fib.s  hello.elf  hello.rs  hello.s  sum.rs  sum.s
compiler/rv4/src/: elf.rs  lib.rs  main.rs  memory.rs  vm.rs
compiler/rv4/tests/: basic.rs
crypto/keygen/: Cargo.toml  key.pem
crypto/keygen/src/: main.rs
database/db6/: AGENTS.md  Cargo.toml  README.md  git.sh  jstest.sh  pub.sh  pytest.sh  rutest.sh  test.sh  test_examples.sh  test_server.sh._bak
database/db6/_doc/: ccc_code_skill.md  ccc_doc_skill.md  plan.md  prompt.md  todo_kv.md  todo_msgq.md  todo_sql.md  v0.1-engine.md  v0.2.md  v0.3.md  v1.0-fts.md  v1.1.md  v2.0-sql.md  v2.1.md  v2.10.md  v2.11.md  v2.12.md  v2.2.md  v2.3.md  v2.4.md  v2.5.md  v2.6.md  v2.7.md  v2.8.md  v2.9.md  v3.0-query.md  v3.1.md  v3.10.md  v3.11.md  v3.12.md  v3.13.md  v3.14.md  v3.15.md  v3.2.md  v3.3.md  v3.4.md  v3.5.md  v3.6.md  v3.7.md  v3.8.md  (+24 more)
database/db6/_wiki/: ACID.md  B+tree.md  B-tree.md  CAP-theorem.md  FTS.md  Inverted-index.md  KV-store.md  LSM-tree.md  LevelDB.md  MongoDB.md  MySQL.md  NoSQL.md  PostgreSQL.md  Query-planner.md  Red-black-tree.md  Redis.md  RocksDB.md  SQL.md  SQLite.md  Skip-list.md  Tokenizer.md  Transaction.md  db6.md  index.md  資料庫索引.md  關聯式資料庫.md
database/db6/examples/: 01_basic.rs  02_queue.rs  03_pubsub.rs  04_sql.rs  05_fts.rs  06_streaming.rs  07_async.rs  08_tokio.rs  09_metrics.rs  btree_engine.rs  capability_check.rs  fts_basic.rs  fts_kv_api.rs  kv_basic.rs  kv_factory.rs  lsm_engine.rs  memory_engine.rs  msgq_async_pubsub.rs  msgq_async_queue.rs  multi_engine.rs  query.rs  sql_basic.rs  sql_json_path.rs
database/db6/nodejs/db6nodejs/: README.md  package-lock.json  package.json  pub.sh
database/db6/python/db6py/: README.md  pub.sh  pyproject.toml
database/db6/src/: error.md  error.rs  lib.md  lib.rs  main.md  main.rs  server_main.rs
database/db6/src/engine/: README.md  capability.md  capability.rs  mod.md  mod.rs
database/db6/src/fts/: README.md  fts.md  mod.rs
database/db6/src/kv/: README.md  kv.md  mod.rs
database/db6/src/msgq/: README.md  async_pubsub.md  async_pubsub.rs  error.md  error.rs  message.md  message.rs  mod.rs  msgq.md  sync_pubsub.md  sync_pubsub.rs  sync_queue.md  sync_queue.rs
database/db6/src/query/: README.md  mod.rs  query.md
database/db6/src/server/: grpc.rs  http.rs  mod.rs  server.rs  uds.rs  websocket.rs
database/db6/src/sql/: README.md  mod.rs  sql.md
database/lsm/: Cargo.toml  script.sh  test.sh
database/lsm/src/: engine.rs  error.rs  lib.rs  main.rs
database/lsm/src/lsm/: bloom.rs  engine.rs  memtable.rs  mod.rs  sstable.rs  wal.rs
database/swisstable/: Cargo.toml  README.md  run_examples.sh
database/swisstable/_doc/: hashbrown.md  swisstable.md
database/swisstable/examples/: basic.rs  phonebook.rs  word_count.rs
database/swisstable/src/: lib.rs  main.rs
eda/_bak/ic4/: Cargo.toml  run.sh
eda/_bak/ic4/examples/: demo.rs
eda/_bak/ic4/src/: lib.rs
eda/ruspice/: Cargo.toml  run.sh  test.sh
eda/ruspice/examples/: basic.rs
eda/ruspice/src/: lib.rs  main.rs
eda/ruspice/tests/: integration_test.rs
gui/chart4/: .gitignore  Cargo.toml  run.sh
gui/chart4/src/: lib.rs  main.rs
os/posix/tools/: Cargo.toml
os/posix/tools/src/: lib.rs
os/posix/tools/tests/: basic.rs
os/xv6-rust-octopus/kernel/: Cargo.toml
os/xv6-rust-octopus/kernel/src/: abi.rs  console.rs  entry.rs  error.rs  exec.rs  file.rs  kernelvec.rs  lib.rs  memlayout.rs  param.rs  plic.rs  proc.rs  riscv.rs  spinlock.rs  start.rs  syscall.rs  sysfile.rs  sysproc.rs  trap.rs  virtio_disk.rs  vm.rs
os/xv6-rust-octopus/user/: Cargo.toml
os/xv6-rust-octopus/user/src/: syscall.rs
os/xv6-rust-octopus/user/testbin/: fs.rs  testrunner.rs
os/xv7-rust-octopus/mkfs/: Cargo.toml
os/xv8-rust-posix/kernel/: Cargo.toml  build.rs  kernel.ld
os/xv8-rust-posix/kernel/src/: abi.rs  console.rs  error.rs  file.rs  fs.rs  lib.rs  log.rs  main.rs  memlayout.rs  pipe.rs  plic.rs  proc.rs  riscv.rs  signal.rs  sleeplock.rs  spinlock.rs  start.rs  syscall.rs  sysfile.rs  sysnet.rs  sysproc.rs  trap.rs  uart.rs  vfs.rs  vm.rs
os/xv8-rust-posix/mkfs/: Cargo.toml
os/xv8-rust-posix/tools/: Cargo.toml
os/xv8-rust-posix/user/: Cargo.toml  build.rs  user.ld
os/xv8-rust-posix/user/src/: io.rs  lib.rs  syscall.rs
os/xv8-rust-posix/user/testbin/: fd.rs  fs.rs  net.rs  pipe.rs  posix_base.rs  posix_file.rs  posix_mmap.rs  posix_perm.rs  posix_proc.rs  posix_time.rs  posix_tty.rs  posix_vfs.rs  proc.rs  sbrk.rs  (+2 more)
ssl/: Cargo.toml  README.md
ssl/examples/: client.rs  server.rs
ssl/src/: cert.rs  client.rs  error.rs  lib.rs
world4/: Cargo.toml  run.sh
world4/examples/: frozen_lake_qtable.rs
world4/src/: core.rs  main.rs  wrappers.rs
world4/src/envs/: cartpole.rs  mod.rs  pong.rs
world4/src/render/: server.rs  test_frozen_lake.rs  test_pong.rs  viewer.html  viewer_pong.html
world4/tests/: world_tests.rs
(+700 files in other folders)
