[package]
name = "rustc4"
version = "0.1.0"
edition = "2021"
authors = ["Computer4 Compiler Team"]
description = "A simple Rust to LLVM IR compiler"
license = "MIT"

[lib]
name = "rustc4"
path = "src/lib.rs"

[[bin]]
name = "rustc4"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
