[package]
name = "rv4"
version = "0.1.0"
edition = "2021"
authors = ["Computer4 Compiler Team"]
description = "A RISC-V emulator supporting RV32I/RV64I/RV64GC ELF files"
license = "MIT"

[lib]
name = "rv4"
path = "src/lib.rs"

[[bin]]
name = "rv4"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
