[package]
name = "db6"
version = "5.4.7"
edition = "2021"
description = "Unified database with pluggable storage engines (Memory/BTree/LSM) (KV + SQL + FTS + Msgq) "
license = "MIT"
repository = "https://github.com/cccrust/db6"

[[bin]]
name = "db6"
path = "src/main.rs"

[[bin]]
name = "server"
path = "src/server_main.rs"

[dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
zstd = "0.13"
bincode = "1.3"
memmap2 = "0.9"
fastrand = "2.0"
bytes = "1.0"
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
prost = "0.13"
prost-types = "0.13"
async-trait = "0.1"

[dependencies.axum]
version = "0.7"
features = ["json", "ws"]

[dependencies.tonic]
version = "0.14"

[dependencies.tower]
version = "0.5"

[dependencies.tokio-tungstenite]
version = "0.20"

[dependencies.futures-util]
version = "0.3"

[dependencies.http]
version = "1.0"

[dev-dependencies]
tempfile = "3.14"

[build-dependencies]
prost-build = "0.13"
