[package]
name = "lsm"
version = "0.1.0"
edition = "2021"
description = "LSM-Tree storage engine - high write throughput persistent key-value store"
license = "MIT"

[dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

[dev-dependencies]
tempfile = "3.14"