[package]
name = "chart4"
version = "0.1.0"
edition = "2021"
description = "Rust 綁定 plotly.js — Rust 產生 plotly JSON，瀏覽器繪圖"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
rand_distr = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
webbrowser = "1"

[profile.release]
opt-level = 3
lto = true
