[package]
name = "tools"
version = "0.1.0"
edition = "2021"

[dependencies]
libposix = { path = "../libposix" }
libc = "0.2"

[[bin]]
name = "echo"
path = "src/bin/echo.rs"

[[bin]]
name = "true"
path = "src/bin/true.rs"

[[bin]]
name = "false"
path = "src/bin/false.rs"

[[bin]]
name = "yes"
path = "src/bin/yes.rs"

[[bin]]
name = "cat"
path = "src/bin/cat.rs"

[[bin]]
name = "wc"
path = "src/bin/wc.rs"

[[bin]]
name = "basename"
path = "src/bin/basename.rs"

[[bin]]
name = "dirname"
path = "src/bin/dirname.rs"

[[bin]]
name = "sleep"
path = "src/bin/sleep.rs"

[[bin]]
name = "kill"
path = "src/bin/kill.rs"

[[bin]]
name = "uname"
path = "src/bin/uname.rs"

[[bin]]
name = "printenv"
path = "src/bin/printenv.rs"

[[bin]]
name = "env"
path = "src/bin/env.rs"

[[bin]]
name = "whoami"
path = "src/bin/whoami.rs"

[[bin]]
name = "id"
path = "src/bin/id.rs"

[[bin]]
name = "hostname"
path = "src/bin/hostname.rs"
