[package]
name = "tools"
version = "0.1.0"
edition = "2021"

[dependencies]
libposix = { path = "../libposix" }
libc = "0.2"

[[bin]]
name = "echo"
path = "src/bin/echo.rs"

[[bin]]
name = "true"
path = "src/bin/true.rs"

[[bin]]
name = "false"
path = "src/bin/false.rs"

[[bin]]
name = "yes"
path = "src/bin/yes.rs"

[[bin]]
name = "cat"
path = "src/bin/cat.rs"

[[bin]]
name = "wc"
path = "src/bin/wc.rs"

[[bin]]
name = "basename"
path = "src/bin/basename.rs"

[[bin]]
name = "dirname"
path = "src/bin/dirname.rs"

[[bin]]
name = "sleep"
path = "src/bin/sleep.rs"

[[bin]]
name = "kill"
path = "src/bin/kill.rs"

[[bin]]
name = "uname"
path = "src/bin/uname.rs"

[[bin]]
name = "printenv"
path = "src/bin/printenv.rs"

[[bin]]
name = "env"
path = "src/bin/env.rs"

[[bin]]
name = "whoami"
path = "src/bin/whoami.rs"

[[bin]]
name = "id"
path = "src/bin/id.rs"

[[bin]]
name = "hostname"
path = "src/bin/hostname.rs"

# ─── Phase 2: File Operations ────────────────────────────────────────────

[[bin]]
name = "ls"
path = "src/bin/ls.rs"

[[bin]]
name = "cp"
path = "src/bin/cp.rs"

[[bin]]
name = "mv"
path = "src/bin/mv.rs"

[[bin]]
name = "rm"
path = "src/bin/rm.rs"

[[bin]]
name = "mkdir"
path = "src/bin/mkdir.rs"

[[bin]]
name = "rmdir"
path = "src/bin/rmdir.rs"

[[bin]]
name = "ln"
path = "src/bin/ln.rs"

[[bin]]
name = "touch"
path = "src/bin/touch.rs"

[[bin]]
name = "chmod"
path = "src/bin/chmod.rs"

[[bin]]
name = "chown"
path = "src/bin/chown.rs"

# ─── Phase 3: Text Processing ────────────────────────────────────────────

[[bin]]
name = "head"
path = "src/bin/head.rs"

[[bin]]
name = "tail"
path = "src/bin/tail.rs"

[[bin]]
name = "sort"
path = "src/bin/sort.rs"

[[bin]]
name = "uniq"
path = "src/bin/uniq.rs"

[[bin]]
name = "cut"
path = "src/bin/cut.rs"

[[bin]]
name = "tr"
path = "src/bin/tr.rs"

[[bin]]
name = "tee"
path = "src/bin/tee.rs"

[[bin]]
name = "od"
path = "src/bin/od.rs"

[[bin]]
name = "cmp"
path = "src/bin/cmp.rs"

[[bin]]
name = "diff"
path = "src/bin/diff.rs"

# ─── Phase 4: Search & Filter ────────────────────────────────────────────

[[bin]]
name = "grep"
path = "src/bin/grep.rs"

[[bin]]
name = "sed"
path = "src/bin/sed.rs"

[[bin]]
name = "xargs"
path = "src/bin/xargs.rs"

# ─── Phase 5: System Tools ───────────────────────────────────────────────

[[bin]]
name = "ps"
path = "src/bin/ps.rs"

[[bin]]
name = "du"
path = "src/bin/du.rs"

[[bin]]
name = "df"
path = "src/bin/df.rs"

[[bin]]
name = "stty"
path = "src/bin/stty.rs"

[[bin]]
name = "test"
path = "src/bin/test.rs"

[[bin]]
name = "nice"
path = "src/bin/nice.rs"

[[bin]]
name = "nohup"
path = "src/bin/nohup.rs"

[[bin]]
name = "date"
path = "src/bin/date.rs"

# ─── Phase 7: Advanced Tools ─────────────────────────────────────────────

[[bin]]
name = "find"
path = "src/bin/find.rs"

[[bin]]
name = "tar"
path = "src/bin/tar.rs"

[[bin]]
name = "patch"
path = "src/bin/patch.rs"

[[bin]]
name = "comm"
path = "src/bin/comm.rs"

[[bin]]
name = "fold"
path = "src/bin/fold.rs"

[[bin]]
name = "fmt"
path = "src/bin/fmt.rs"

[[bin]]
name = "nl"
path = "src/bin/nl.rs"

[[bin]]
name = "expand"
path = "src/bin/expand.rs"

[[bin]]
name = "unexpand"
path = "src/bin/unexpand.rs"

# ─── Phase 6: Shell ──────────────────────────────────────────────────────

[[bin]]
name = "sh"
path = "src/bin/sh.rs"
