[package]
name = "tools"
version = "0.1.0"
edition = "2021"

[dependencies]
libposix = { path = "../libposix" }
libc = "0.2"

[[bin]]
name = "echo"
path = "src/bin/echo.rs"

[[bin]]
name = "true"
path = "src/bin/true.rs"

[[bin]]
name = "false"
path = "src/bin/false.rs"

[[bin]]
name = "yes"
path = "src/bin/yes.rs"

[[bin]]
name = "cat"
path = "src/bin/cat.rs"

[[bin]]
name = "wc"
path = "src/bin/wc.rs"

[[bin]]
name = "basename"
path = "src/bin/basename.rs"

[[bin]]
name = "dirname"
path = "src/bin/dirname.rs"

[[bin]]
name = "sleep"
path = "src/bin/sleep.rs"

[[bin]]
name = "kill"
path = "src/bin/kill.rs"

[[bin]]
name = "uname"
path = "src/bin/uname.rs"

[[bin]]
name = "printenv"
path = "src/bin/printenv.rs"

[[bin]]
name = "env"
path = "src/bin/env.rs"

[[bin]]
name = "whoami"
path = "src/bin/whoami.rs"

[[bin]]
name = "id"
path = "src/bin/id.rs"

[[bin]]
name = "hostname"
path = "src/bin/hostname.rs"

# ─── Phase 2: File Operations ────────────────────────────────────────────

[[bin]]
name = "ls"
path = "src/bin/ls.rs"

[[bin]]
name = "cp"
path = "src/bin/cp.rs"

[[bin]]
name = "mv"
path = "src/bin/mv.rs"

[[bin]]
name = "rm"
path = "src/bin/rm.rs"

[[bin]]
name = "mkdir"
path = "src/bin/mkdir.rs"

[[bin]]
name = "rmdir"
path = "src/bin/rmdir.rs"

[[bin]]
name = "ln"
path = "src/bin/ln.rs"

[[bin]]
name = "touch"
path = "src/bin/touch.rs"

[[bin]]
name = "chmod"
path = "src/bin/chmod.rs"

[[bin]]
name = "chown"
path = "src/bin/chown.rs"

# ─── Phase 3: Text Processing ────────────────────────────────────────────

[[bin]]
name = "head"
path = "src/bin/head.rs"

[[bin]]
name = "tail"
path = "src/bin/tail.rs"

[[bin]]
name = "sort"
path = "src/bin/sort.rs"

[[bin]]
name = "uniq"
path = "src/bin/uniq.rs"

[[bin]]
name = "cut"
path = "src/bin/cut.rs"

[[bin]]
name = "tr"
path = "src/bin/tr.rs"

[[bin]]
name = "tee"
path = "src/bin/tee.rs"

[[bin]]
name = "od"
path = "src/bin/od.rs"

[[bin]]
name = "cmp"
path = "src/bin/cmp.rs"

[[bin]]
name = "diff"
path = "src/bin/diff.rs"

# ─── Phase 4: Search & Filter ────────────────────────────────────────────

[[bin]]
name = "grep"
path = "src/bin/grep.rs"

[[bin]]
name = "sed"
path = "src/bin/sed.rs"

[[bin]]
name = "xargs"
path = "src/bin/xargs.rs"

# ─── Phase 5: System Tools ───────────────────────────────────────────────

[[bin]]
name = "ps"
path = "src/bin/ps.rs"

[[bin]]
name = "du"
path = "src/bin/du.rs"

[[bin]]
name = "df"
path = "src/bin/df.rs"

[[bin]]
name = "stty"
path = "src/bin/stty.rs"

[[bin]]
name = "test"
path = "src/bin/test.rs"

[[bin]]
name = "nice"
path = "src/bin/nice.rs"

[[bin]]
name = "nohup"
path = "src/bin/nohup.rs"

[[bin]]
name = "date"
path = "src/bin/date.rs"

# ─── Phase 7: Advanced Tools ─────────────────────────────────────────────

[[bin]]
name = "find"
path = "src/bin/find.rs"

[[bin]]
name = "tar"
path = "src/bin/tar.rs"

[[bin]]
name = "patch"
path = "src/bin/patch.rs"

[[bin]]
name = "comm"
path = "src/bin/comm.rs"

[[bin]]
name = "fold"
path = "src/bin/fold.rs"

[[bin]]
name = "fmt"
path = "src/bin/fmt.rs"

[[bin]]
name = "nl"
path = "src/bin/nl.rs"

[[bin]]
name = "expand"
path = "src/bin/expand.rs"

[[bin]]
name = "unexpand"
path = "src/bin/unexpand.rs"

# ─── Phase 6: Shell ──────────────────────────────────────────────────────

[[bin]]
name = "sh"
path = "src/bin/sh.rs"

# ─── v0.8: Small Output Tools ────────────────────────────────────────────

[[bin]]
name = "printf"
path = "src/bin/printf.rs"

[[bin]]
name = "expr"
path = "src/bin/expr.rs"

[[bin]]
name = "pwd"
path = "src/bin/pwd.rs"

[[bin]]
name = "tty"
path = "src/bin/tty.rs"

[[bin]]
name = "logname"
path = "src/bin/logname.rs"

[[bin]]
name = "logger"
path = "src/bin/logger.rs"

# ─── v0.9: File System Tools ────────────────────────────────────────────

[[bin]]
name = "file"
path = "src/bin/file.rs"

[[bin]]
name = "chgrp"
path = "src/bin/chgrp.rs"

[[bin]]
name = "link"
path = "src/bin/link.rs"

[[bin]]
name = "unlink"
path = "src/bin/unlink.rs"

[[bin]]
name = "mkfifo"
path = "src/bin/mkfifo.rs"

[[bin]]
name = "pathchk"
path = "src/bin/pathchk.rs"

# ─── v0.10: Text Merge / Split Tools ────────────────────────────────────

[[bin]]
name = "join"
path = "src/bin/join.rs"

[[bin]]
name = "paste"
path = "src/bin/paste.rs"

[[bin]]
name = "split"
path = "src/bin/split.rs"

[[bin]]
name = "strings"
path = "src/bin/strings.rs"

[[bin]]
name = "cksum"
path = "src/bin/cksum.rs"

[[bin]]
name = "tsort"
path = "src/bin/tsort.rs"

# ─── v0.11: Shell Auxiliary Tools ───────────────────────────────────────

[[bin]]
name = "time"
path = "src/bin/time_.rs"

[[bin]]
name = "renice"
path = "src/bin/renice.rs"

[[bin]]
name = "wait"
path = "src/bin/wait.rs"

[[bin]]
name = "umask"
path = "src/bin/umask.rs"

[[bin]]
name = "hash"
path = "src/bin/hash.rs"

[[bin]]
name = "type"
path = "src/bin/type_.rs"

[[bin]]
name = "command"
path = "src/bin/command.rs"

[[bin]]
name = "alias"
path = "src/bin/alias.rs"

[[bin]]
name = "unalias"
path = "src/bin/unalias.rs"

# ─── v0.12: Terminal / User Tools ───────────────────────────────────────

[[bin]]
name = "more"
path = "src/bin/more.rs"

[[bin]]
name = "dd"
path = "src/bin/dd.rs"

[[bin]]
name = "tabs"
path = "src/bin/tabs.rs"

[[bin]]
name = "tput"
path = "src/bin/tput.rs"

[[bin]]
name = "mesg"
path = "src/bin/mesg.rs"

[[bin]]
name = "write"
path = "src/bin/write_.rs"
