[package]
name = "octopos"
version = "1.1.0"
edition = "2024"
authors = ["Boran Seckin <boran@boranseckin.com>"]
description = "xv6 for RISC-V in Rust"
repository = "https://github.com/boranseckin/octopos"
license = "MIT"
keywords = ["riscv", "xv6"]
default-run = "octopos"

[lib]
name = "kernel"
path = "src/lib.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "octopos"
path = "src/main.rs"
test = false
doctest = false
bench = false

[dependencies]
buddy-alloc = "0.6"
