[package]
name = "user"
version = "1.0.0"
edition = "2024"
authors = ["Boran Seckin <boran@boranseckin.com>"]
description = "user space programs for xv8"
repository = ""
license = "MIT"
keywords = ["riscv", "xv6"]

[lib]
name = "user"
path = "src/lib.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "init"
path = "bin/init.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "sh"
path = "bin/sh.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "echo"
path = "bin/echo.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "cat"
path = "bin/cat.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "ls"
path = "bin/ls.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "rm"
path = "bin/rm.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "mkdir"
path = "bin/mkdir.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "ln"
path = "bin/ln.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "wc"
path = "bin/wc.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "kill"
path = "bin/kill.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "zombie"
path = "bin/zombie.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "sleep"
path = "bin/sleep.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "uptime"
path = "bin/uptime.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "poweroff"
path = "bin/poweroff.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "udp"
path = "bin/udp.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "demo"
path = "bin/demo.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "primes"
path = "bin/primes.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "_testrunner"
path = "testbin/testrunner.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "_sbrk"
path = "testbin/sbrk.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "_cow"
path = "testbin/cow.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "_fs"
path = "testbin/fs.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "_pipe"
path = "testbin/pipe.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "_proc"
path = "testbin/proc.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "_fd"
path = "testbin/fd.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "_net"
path = "testbin/net.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "_posix_base"
path = "testbin/posix_base.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "_signal"
path = "testbin/signal.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "_posix_file"
path = "testbin/posix_file.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "_posix_mmap"
path = "testbin/posix_mmap.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "_posix_proc"
path = "testbin/posix_proc.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "_posix_time"
path = "testbin/posix_time.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "_posix_perm"
path = "testbin/posix_perm.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "_posix_tty"
path = "testbin/posix_tty.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "_posix_vfs"
path = "testbin/posix_vfs.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "cp_xv8"
path = "bin/cp_xv8.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "chmod_xv8"
path = "bin/chmod_xv8.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "touch_xv8"
path = "bin/touch_xv8.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "chown_xv8"
path = "bin/chown_xv8.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "cut_xv8"
path = "bin/cut_xv8.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "head_xv8"
path = "bin/head_xv8.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "mv_xv8"
path = "bin/mv_xv8.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "sort_xv8"
path = "bin/sort_xv8.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "tail_xv8"
path = "bin/tail_xv8.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "tr_xv8"
path = "bin/tr_xv8.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "uniq_xv8"
path = "bin/uniq_xv8.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "dirname"
path = "bin/dirname.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "basename"
path = "bin/basename.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "readlink"
path = "bin/readlink.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "symlink"
path = "bin/symlink.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "test"
path = "bin/test.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "expr"
path = "bin/expr.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "printf"
path = "bin/printf.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "printenv"
path = "bin/printenv.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "env"
path = "bin/env.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "nohup"
path = "bin/nohup.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "stat"
path = "bin/stat.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "id"
path = "bin/id.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "uname"
path = "bin/uname.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "pwd"
path = "bin/pwd.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "whoami"
path = "bin/whoami.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "link"
path = "bin/link.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "unlink"
path = "bin/unlink.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "tee"
path = "bin/tee.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "nice"
path = "bin/nice.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "grep"
path = "bin/grep.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "sed"
path = "bin/sed.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "awk"
path = "bin/awk.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "find"
path = "bin/find.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "xargs"
path = "bin/xargs.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "file"
path = "bin/file.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "dd"
path = "bin/dd.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "install"
path = "bin/install.rs"
test = false
doctest = false
bench = false

[dependencies]
kernel = { package = "xv8", path = "../kernel", version = "0.1.0" }
