[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "db6py"
version = "5.4.7"
description = "Python client for db6 database"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your@email.com"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["database", "kv-store", "db6"]
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
websocket = ["websockets>=10.0"]
async = ["aiohttp>=3.8.0"]

[project.urls]
Homepage = "https://github.com/yourusername/db6"
Documentation = "https://github.com/yourusername/db6#readme"
Repository = "https://github.com/yourusername/db6"
Issues = "https://github.com/yourusername/db6/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
